--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-	"name": "objective_management",
-	"version": "1.0.0",
-	"description": "A simple CAP project.",
-	"dependencies": {
-		"@cap-js/hana": "^2",
-		"@sap/cds": "^9",
-		"@sap/hana-client": "^2.26.18",
-		"@sap/xssec": "^4",
-		"express": "^4",
-		"net": "^1.0.2"
-	},
-	"devDependencies": {
-		"@cap-js/sqlite": "^2",
-		"@sap/cds-dk": "^9",
-		"@sap/dev-cap-tools": "^1.31.0",
-		"cds-plugin-ui5": "^0.13.0",
-		"mbt": "^1.2.29",
-		"rimraf": "^5.0.5"
-	},
-	"scripts": {
-		"start": "cds-serve",
-		"watch-mboobjectives": "cds watch --open mboobjectives/index.html?sap-ui-xx-viewCache=false --livereload false",
-		"undeploy": "cf undeploy objective_management --delete-services --delete-service-keys --delete-service-brokers",
-		"build": "rimraf resources mta_archives && mbt build --mtar archive",
-		"deploy": "cf deploy mta_archives/archive.mtar --retries 1"
-	},
-	"private": true,
-	"cds": {
-		"requires": {
-			"[production]": {
-				"auth": "xsuaa"
-			}
-		}
-	},
-	"workspaces": [
-		"app/*"
-	]
+  "name": "objective_management",
+  "version": "1.0.0",
+  "description": "A simple CAP project.",
+  "dependencies": {
+    "@cap-js/hana": "^2",
+    "@sap/cds": "^9",
+    "@sap/hana-client": "^2.26.18",
+    "@sap/xssec": "^4",
+    "express": "^4",
+    "net": "^1.0.2"
+  },
+  "devDependencies": {
+    "@cap-js/sqlite": "^2",
+    "@sap/cds-dk": "^9",
+    "@sap/dev-cap-tools": "^1.31.0",
+    "cds-plugin-ui5": "^0.13.0",
+    "mbt": "^1.2.29",
+    "rimraf": "^5.0.5"
+  },
+  "scripts": {
+    "start": "cds-serve",
+    "watch-mboobjectives": "cds watch --open mboobjectives/index.html?sap-ui-xx-viewCache=false --livereload false",
+    "undeploy": "cf undeploy objective_management --delete-services --delete-service-keys --delete-service-brokers",
+    "build": "rimraf resources mta_archives && mbt build --mtar archive",
+    "deploy": "cf deploy mta_archives/archive.mtar --retries 1",
+    "watch-mboapproval": "cds watch --open mboapproval/index.html?sap-ui-xx-viewCache=false --livereload false"
+  },
+  "private": true,
+  "cds": {
+    "requires": {
+      "[production]": {
+        "auth": "xsuaa"
+      }
+    }
+  },
+  "workspaces": [
+    "app/*"
+  ]
 }
